feat(auth): refactor auth and user controllers and update Swagger docs- Refactored uth.controller.js and user.controller.js  - Updated Swagger YAML to reflect new API changes- Modified uth.route.js and user.route.js accordingly- Updated frontend forms: Signin, Signup, Verify OTP, Forgot Password- Created uth.api.js module in frontend
